attempt to fix horizontal fill on iphone; prevent user selection on iphone

--- a/apps/charity/pages/styles.css
+++ b/apps/charity/pages/styles.css
@@ -10,7 +10,7 @@ body {
 main {
   min-height: 100dvh;
   height: 100%;
-  width: 100%;
+  width: 100dvw;
   overflow: auto;
   display: flex;
 }
